<resources>
    <string name="app_name">TwoTouchMail</string>
    <string name="button_pickup">迎えにきて</string>
    <string name="button_no_dinner">めしいらない</string>
    <string name="button_send">送信</string>
    <string name="subject">件名</string>
    <string name="place">場所</string>
    <string name="station">駅</string>
    <string name="school">学校</string>
    <string name="always">いつもの場所</string>
    <string name="mail_to">sayu012711996@yahoo.co.jp</string>


</resources>
